added voice pitch picker

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <button id="clearBtn" title="Clear the chat">Clear</button>
         </div>
     </header>
-
+    <label style="margin-left: 10px;">
+        Pitch:
+        <input type="range" min="0.5" max="2" step="0.1" value="1" id="voicePitch">
+    </label>
     <script src="script.js"></script>
 </body>
 </html>
