--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <button id="toggleAiBtn" title="Turn AI on/off">AI: Off</button>
             <button id="setupKeyBtn" title="Input API key">API Key</button>
             <button id="clearBtn" title="Clear the chat">Clear</button>
+            <select title="Voice" id="voiceSelect">
+                
+            </select>
         </div>
     </header>
     <label style="margin-left: 10px;">
