--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <button id="setupKeyBtn" title="Input API key">API Key</button>
             <button id="clearBtn" title="Clear the chat">Clear</button>
             <select title="Voice" id="voiceSelect">
-                
+
             </select>
         </div>
     </header>
-    <label style="margin-left: 10px;">
+    <label>
         Pitch:
         <input type="range" min="0.5" max="2" step="0.1" value="1" id="voicePitch">
     </label>
